modify 이미지 경로 수정

--- a/5.hphk_django.md
+++ b/5.hphk_django.md
@@ -5,7 +5,7 @@
 - MTV 패턴 (M: Model 데이터를 관리, T: Template 사용자가 보는화면, V: View 중간관리자)
 - View -> Model -> Database -> Model ->View-> Template -> User
 
-![django1](C:\TIL\md_img\django1.JPG)
+![django1](https://user-images.githubusercontent.com/33045725/67652227-47157300-f987-11e9-9f80-8fdfa82ef8e9.JPG)
 
 - **URLs**: 단일 함수를 통해 모든 URL 요청을 처리하는 것이 가능하지만, 분리된 뷰 함수를 작성하는 것이 각각의 리소스를 유지보수하기 훨씬 쉽습니다. URL mapper는 요청 URL을 기준으로 HTTP 요청을 적절한 view로 보내주기 위해 사용됩니다. 또한 URL mapper는 URL에 나타나는 특정한 문자열이나 숫자의 패턴을 일치시켜 데이터로서 뷰 함수에 전달할 수 있습니다.
 - **View**: view는 HTTP 요청을 수신하고 HTTP 응답을 반환하는 요청 처리 함수입니다. View는 Model을 통해 요청을 충족시키는 데 필요한 데이터에 접근합니다. 그리고 탬플릿에게 응답의 서식 설정을 맡깁니다.
@@ -17,9 +17,9 @@ $ python -m venv venv #05_django위치에서 가상환경 생성
 ```
 ##### 자동으로 가상환경 실행 설정
 - ctrl +shift+p > interpreter
-![django2](C:\TIL\md_img\django2.jpg)
+![django2](https://user-images.githubusercontent.com/33045725/67652228-47157300-f987-11e9-96a2-aedce4425305.jpg)
 - .vscode > settings.json 파일이 생성되어 있으면 설정완료
-![django3](C:\TIL\md_img\django3.JPG)
+![django3](https://user-images.githubusercontent.com/33045725/67652229-47ae0980-f987-11e9-81cd-c849a4f48b2d.JPG)
 ##### .gitignore 생성
 - .gitignore 파일생성
     - gitignore.io에서
@@ -50,7 +50,7 @@ python -m pip install --upgrade pip
 pip install django #최신버전 django 설치
 python -m django --version #django 버전확인
 ```
-![django4](C:\TIL\md_img\django4.JPG)
+![django4](https://user-images.githubusercontent.com/33045725/67652231-47ae0980-f987-11e9-995f-be26a3ff47e5.JPG)
 
 ```linux
 $ cd 05_django/
@@ -107,7 +107,7 @@ LANGUAGE_CODE = 'ko-kr'
 TIME_ZONE = 'Aasia/Seoul'
 ```
 - 아래 처럼 화면이 나오면 설정완료
-![django5](C:\TIL\md_img\django5.JPG)
+![django5](https://user-images.githubusercontent.com/33045725/67652233-47ae0980-f987-11e9-8a87-e50448d0c5b6.JPG)
 
 ##### MTV (== MVC)
 
@@ -120,7 +120,10 @@ TIME_ZONE = 'Aasia/Seoul'
 	- urls.py : url 주소관리
 
 ##### 간단한 페이지 생성
-- pages > views.py
+- extensions > django html 설치
+![django6]https://user-images.githubusercontent.com/33045725/67652226-47157300-f987-11e9-929d-7545fe94bf0c.JPG
+
+- pages > views.py 파일 생성
 ```python
 # view 함수 -> 중간관리자
 # 사용자가 접속해서 볼 페이지를 작성. 즉 하나하나의 페이지를 view라고 부른다
@@ -140,5 +143,13 @@ urlpatterns = [
     path('index/', views.index),
     ...
 ]
-
 ```
+
+##### 코드 작성 순서(권장)
+- views. py : 보여주고자 하는 페이지의 뷰 함수를 작성
+- urls.py :사용자에게 보여줄 템플릿 페이지를 작성
+- templates : 해당 경로로 들어왔을때 뷰 함수를 실행
+
+## Django Template
+#### 템플릿 변수
+
