modify 이미지 경로 수정

--- a/5.hphk_django.md
+++ b/5.hphk_django.md
@@ -121,7 +121,7 @@ TIME_ZONE = 'Aasia/Seoul'
 
 ##### 간단한 페이지 생성
 - extensions > django html 설치
-![django6]https://user-images.githubusercontent.com/33045725/67652226-47157300-f987-11e9-929d-7545fe94bf0c.JPG
+![django6](https://user-images.githubusercontent.com/33045725/67652226-47157300-f987-11e9-929d-7545fe94bf0c.JPG)
 
 - pages > views.py 파일 생성
 ```python
