add 실습코드 추가

--- a/5.hphk_django.md
+++ b/5.hphk_django.md
@@ -151,5 +151,18 @@ urlpatterns = [
 - templates : 해당 경로로 들어왔을때 뷰 함수를 실행
 
 ## Django Template
-#### 템플릿 변수
+##### 템플릿 변수( Template Variable)
+	- 세번째 인자로 딕셔너리 형태 변수 넘겨주기
+```python
+def dinner(request):
+    menu = ['초밥','삼겹살','치즈돈까스','살치살스테이크']
+    pick = random.choice(menu)
+    context = {
+        'pick':pick
+    }
+    return render(request, 'dinner.html',context)
+```
+##### 동적 라우팅(Variable Routing)
+	- 왜 동적 라우팅이 필요할까?
+
 
