add html form post 요청

--- a/5.hphk_django.md
+++ b/5.hphk_django.md
@@ -10,7 +10,7 @@
 - **URLs**: 단일 함수를 통해 모든 URL 요청을 처리하는 것이 가능하지만, 분리된 뷰 함수를 작성하는 것이 각각의 리소스를 유지보수하기 훨씬 쉽습니다. URL mapper는 요청 URL을 기준으로 HTTP 요청을 적절한 view로 보내주기 위해 사용됩니다. 또한 URL mapper는 URL에 나타나는 특정한 문자열이나 숫자의 패턴을 일치시켜 데이터로서 뷰 함수에 전달할 수 있습니다.
 - **View**: view는 HTTP 요청을 수신하고 HTTP 응답을 반환하는 요청 처리 함수입니다. View는 Model을 통해 요청을 충족시키는 데 필요한 데이터에 접근합니다. 그리고 탬플릿에게 응답의 서식 설정을 맡깁니다.
 - **Models**: Model은 application의 데이터 구조를 정의하고 데이터베이스의 기록을 관리(추가, 수정, 삭제)하고 query하는 방법을 제공하는 파이썬 객체입니다.. 
-- **Templates**: 탬플릿은 파일의 구조나 레이아웃을 정의하고(예: HTML 페이지), 실제 내용을 보여주는 데 사용되는 플레이스홀더를 가진 텍스트 파일입니다. view는 HTML 탬플릿을 이용하여 동적으로 HTML 페이지를 만들고 model에서 가져온 데이터로 채웁니다. 탬플릿으로 모든 파일의 구조를 정의할 수 있습니다.탬플릿이 꼭 HTML 타입일 필요는 없습니다
+- **Templates**: 탬플릿은 파일의 구조나 레이아웃을 정의하고(예: HTML 페이지), 실제 내용을 보여주는 데 사용되는 플레이스홀더를 가진 텍스트 파일입니다. view는 HTML 탬플릿을 이용하여 동적으로ㅔㅑ HTML 페이지를 만들고 model에서 가져온 데이터로 채웁니다. 탬플릿으로 모든 파일의 구조를 정의할 수 있습니다.탬플릿이 꼭 HTML 타입일 필요는 없습니다
 ```cmd
 $ mkdir 05_django #폴더생성
 $ python -m venv venv #05_django위치에서 가상환경 생성
@@ -79,7 +79,7 @@ $ python manage.py runserver #서버 실행
 - db.sqlite3 #db정보
 - manage.py #django프로젝트 의사소통할때 사용하는 command line 유틸리티
 
-```linux
+```cmd
 student@M150119 MINGW64 /c/TIL/05_django/00_django_intro (master)
 $ python manage.py startapp pages #실행하면 pages 파일Application 생성됨
 ```
@@ -112,7 +112,7 @@ INSTALLED_APPS = [
 ...
 LANGUAGE_CODE = 'ko-kr' #언어설정
 
-TIME_ZONE = 'Aasia/Seoul' #시간설정
+TIME_ZONE = 'Asia/Seoul' #시간설정
 ```
 - 아래 처럼 화면이 나오면 설정완료
 ![django5](https://user-images.githubusercontent.com/33045725/67652233-47ae0980-f987-11e9-8a87-e50448d0c5b6.JPG)
@@ -470,4 +470,6 @@ urlpatterns = [
    ...
 ]
 ```
+
+
 
