add static file 호출

--- a/5.hphk_django2.md
+++ b/5.hphk_django2.md
@@ -202,4 +202,12 @@ def user_create(request):
 
 
 
+## 4. 정적파일 (Static files)
 
+#### 4.1 기본개념
+
+- 정적파일
+
+  - 별도의 가공없이 사용자에게 그냥 전달만 해주면 되는 파일들. 예를들어 이미지, CSS, Javascript 파일들이 있다 서버(프로그래머)가 미리 준비해두고, 사용자는 그냥 받아 보기만 하면된다.
+
+##### django static  실습
