modify url 로직 분리, 이름공간 정리

--- a/5.hphk_django2.md
+++ b/5.hphk_django2.md
@@ -1,10 +1,11 @@
 ## 2019.10.29
 
+## 프로젝트 생성
 - 폴더구조
 ```
 05_Django/
 	00_django_intro
-	01_django_intro_2 #새로생성
+	01_django_intro_2 #프로젝트 새로생성
 ```
 - 작업순서
     1. 가상환경 진입
@@ -210,4 +211,115 @@ def user_create(request):
 
   - 별도의 가공없이 사용자에게 그냥 전달만 해주면 되는 파일들. 예를들어 이미지, CSS, Javascript 파일들이 있다 서버(프로그래머)가 미리 준비해두고, 사용자는 그냥 받아 보기만 하면된다.
 
-##### django static  실습
+#### django static  실습
+- pages > static 폴더생성
+- pages > static > images, stylesheets 폴더생성
+
+- static_sample.html 추가
+	- {% load static %} 상위에 정의
+	- {% static '이미지 경로 '%} 어플리케이션 내에 images 이미지 경로 지정
+```html
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link rel="stylesheet" href="{% static 'stylesheets/sample.css'%}">
+</head>
+<body>
+  <h1>정적 파일 출력 실습</h1>
+  <img src="{% static 'images/maxresdefault.jpg'%}" alt=""><br>
+  <img src="../static/images/maxresdefault.jpg" alt="">
+</body>
+</html>
+```
+
+## 5. URL 로직 분리
+- 이때까지 프로젝트 폴더 안에 있는 urls.py에서 모든 URL경로를 관리했다
+- 관리해야할 URL경로가 많아지면 매우 복잡해진다. 각자의 애플리케이션에 해당하는 URL은 애플리케이션이 직접 관리하도록 위임 시켜보자
+#### 프로젝트 구조
+```
+05_Django #프로젝트
+	- 01_django_intro_2
+        - pages #어플리케이션
+            - urls.py
+        - utilities #어플리케이션
+            - urls.py
+        - urls.py
+        - views.py
+...
+```
+
+#### URL 로직 분리 실습
+- 01_django_intro_2 위치에서 어플리케이션 생성
+```cmd
+student@M150119 MINGW64 /c/TIL/05_django/01_django_intro_2 (master)
+$ python manage.py startapp utilities 
+```
+
+- 05_django > 01_django_intro_2 > pages > urls.py 어플리케이션 urls 파일 생성
+```python
+from django.urls import path
+from . import views
+
+urlpatterns = [
+    path('static_sample/',views.static_sample),
+    path('user_create/',views.user_create),
+    path('user_new/',views.user_new),
+    path('art/',views.art),
+    path('art_result/',views.art_result),
+    path('throw/',views.throw),
+    path('catch/',views.catch),
+    path('', views.index)
+]
+```
+- 05_django > 01_django_intro_2 > utilites > urls.py 어플리케이션 urls 파일 생성
+- 각 각의 어플리케이션에서 url 로직 처리되는 구조로 수정
+- 05_django > config > urls.py #프로젝트 파일 수정
+	- include import 추가
+```python
+from django.contrib import admin
+from django.urls import path, include
+from pages import views
+
+urlpatterns = [
+    # 사용자가 pages/로 시작하는 경로로 들어오면
+    # pages 앱 안의 urls.py에서 처리하도록 설정
+    path('pages/',include('pages.urls')),
+    path('utilities/',include('utilities.urls')),
+    path('admin/', admin.site.urls),
+]
+```
+
+## 6. 이름공간(Namespace) 정리
+- 장고는 기본적으로 템플릿(스태틱도 동일) 파일을 탐색할 때, 템플릿 폴더를 전부 모아놓고 순서대로 탐색한다.
+- 템플릿 검색 순서는 settings.py에 정의되어 INSTALLED_APPS 리스트 위에서 부터 순서대로 탐색한다.
+- 파일구조 변경
+```
+[To-be 폴더구조]
+- 01_django_intro_2
+    - pages
+        - templates
+            - pages
+                - index.html
+    - utilities
+        - templates
+            - utilities
+                - index.html
+...
+```
+- 기존 pages > view.py : template url 수정
+```python
+def index(request):
+    return render(request,'pages/index.html')
+```
+- utilities > view.py : template url 수정
+```python
+def index(request):
+    return render(request,'utilities/index.html')
+```
+
+- 그냥 templates 폴더를 방문해서 파일을 찾지 않고, 해당 어플리케이션에 맞는 폴더를 찾기위해 중간에 폴더하나를 더 생성해준다
