--- a/5.hphk_django2.md
+++ b/5.hphk_django2.md
@@ -242,7 +242,7 @@ def user_create(request):
 - 관리해야할 URL경로가 많아지면 매우 복잡해진다. 각자의 애플리케이션에 해당하는 URL은 애플리케이션이 직접 관리하도록 위임 시켜보자
 #### 프로젝트 구조
 ```
-05_Django #프로젝트
+- 05_Django #프로젝트
 	- 01_django_intro_2
         - pages #어플리케이션
             - urls.py
@@ -323,3 +323,4 @@ def index(request):
 ```
 
 - 그냥 templates 폴더를 방문해서 파일을 찾지 않고, 해당 어플리케이션에 맞는 폴더를 찾기위해 중간에 폴더하나를 더 생성해준다
+
