--- a/5.hphk_django2.md
+++ b/5.hphk_django2.md
@@ -216,8 +216,8 @@ def user_create(request):
 - pages > static > images, stylesheets 폴더생성
 
 - static_sample.html 추가
-	- {% load static %} 상위에 정의
-	- {% static '이미지 경로 '%} 어플리케이션 내에 images 이미지 경로 지정
+	- **{% load static %}** 상위에 정의
+	- **{% static '이미지 경로 '%}** 어플리케이션 내에 images 이미지 경로 지정
 ```html
 {% load static %}
 <!DOCTYPE html>
@@ -323,4 +323,3 @@ def index(request):
 ```
 
 - 그냥 templates 폴더를 방문해서 파일을 찾지 않고, 해당 어플리케이션에 맞는 폴더를 찾기위해 중간에 폴더하나를 더 생성해준다
-
