템플릿 상속, 개발환경 관리 추가

--- a/5.hphk_django2.md
+++ b/5.hphk_django2.md
@@ -77,7 +77,7 @@ urlpatterns = [
 	- name :  서버측에서 사용자가 입력한 값을 가져올 이름으로 사용
 	
 ## 2. HTML Form - GET 요청
-#### 2.1 기본 개념
+####  기본 개념
  - 요청의 종류 중 GET 요청은 서버로 부터 정보를 조회하는데 사용한다. 데이터를 서버로 전송할때 쿼리스트링을 통해 전송한다
  - 서버의 데이터(리소스)를 변경 시키지 않는 로직이고, HTML 파일을 조회할 때 사용한다. 우리는 서버에 GET요청을 하면 , HTML 문서 한 장을 받는다
  - throw & catch 실습
@@ -165,7 +165,7 @@ print(request.GET)
 	- CsrfViewMiddleware 가 존재하기 때문에 Form에서 POST 요청을 할때 {% csrf_token %}을 넣지 않으면 403에러를 발생시킴. 403에러는 서버에는 정상적으로 접근을 하였으나, 권한이 없어서 접근하지 못하는 에러이다.
 	- {% csrf_token %}을 코드에 삽입하면, 실제 Form 태그를 개발자 도구로 찍어보면 hidden type의 input 태그가 생기고 그 안에 암호화된 hash값이 함께 전송되는 것을 확인할 수 있다
 
-##### 실습
+##### Form POST 실습
 - view.py 함수추가
 ```python
 def user_new(request):
@@ -205,7 +205,7 @@ def user_create(request):
 
 ## 4. 정적파일 (Static files)
 
-#### 4.1 기본개념
+#### 기본개념
 
 - 정적파일
 
@@ -323,3 +323,94 @@ def index(request):
 ```
 
 - 그냥 templates 폴더를 방문해서 파일을 찾지 않고, 해당 어플리케이션에 맞는 폴더를 찾기위해 중간에 폴더하나를 더 생성해준다
+
+
+## 7.템플릿 상속(Template Inheritance)
+
+#### 개념
+- 상속은 기본적으로 코드의 재사용성에 초점을 맞춘다
+	- 템플릿에서 반복되는 코드부분은 만들어 두고 가져다 사용
+##### 템플릿 상속 실습
+- 프로젝트 폴더(01_django_intro_2) > config > templates 폴더생성
+- 프로젝트 폴더(01_django_intro_2) > config > templates > base.html 생성
+- base.html 작성
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>
+  {% block title %}
+  {% endblock title %}
+  </title>
+  {% block css %}
+  {% endblock css %}
+</head>
+<body>
+  {% comment %} <h1>base.html</h1> {% endcomment %}
+  {% block body %}
+  {% endblock body %} 
+</body>
+</html>
+```
+- config > settings.py 파일 `DIRS` 부분 수정
+```python
+TEMPLATES = [
+    {
+        ...
+        'DIRS': [os.path.join(BASE_DIR,'config','templates')],
+       	...
+    },
+]
+```
+- 폴더 구조 변경
+```
+- 01_django_intro_2
+	- config
+		- templates
+			- pages
+				- index.html
+				...
+			- utilities
+				- index.html
+				...
+			- base.html
+```
+- config > templates > pages > static.html 수정
+```php+HTML
+{% extends 'base.html' %}
+{% load static %}
+
+{% block title %}
+static_sample
+{% endblock %}
+
+{% block css %}
+<link rel="stylesheet" href="{% static 'pages/stylesheets/sample.css'%}"> 
+{% endblock %}
+
+{% block body %}
+   <h1>정적 파일 출력 실습</h1>
+  <img src="{% static 'pages/images/maxresdefault.jpg'%}" alt=""><br>
+  <img src="/static/pages/images/maxresdefault.jpg" alt="">
+{% endblock %}
+```
+- 나머지 모든 html 파일도 위와 동일하게 모두 변경
+
+## 8. 개발환경 관리
+
+- 프로젝트를 받아보는 다른 사람이 프로젝트에 필요한 파이썬 패키지들을 정확하게 설치하기 위해 현재 설치되어 있는 패키지들 목록을 넘겨준다
+
+- 현재 가상환경에 설치되어 있는 패키지 리스트 목록을 파일로 생성
+```cmd
+# 프로젝트 경로에서
+student@M150119 MINGW64 /c/TIL/05_django/01_django_intro_2 (master)
+$ pip freeze > requirements.txt
+```
+- 패키지 목록을 읽어서 없는 패키지를 자동으로 설치하기
+```cmd
+student@M150119 MINGW64 /c/TIL/05_django/01_django_intro_2 (master)
+$ pip install -r requirements.txt
+```
