--- a/5.hphk_django2.md
+++ b/5.hphk_django2.md
@@ -355,7 +355,9 @@ def index(request):
 </body>
 </html>
 ```
-- config > settings.py 파일 `DIRS` 부분 수정
+- 템플릿 탐색경로 수정
+  - 장고는 기본적으로 어플리케이션의 template라는 폴더에서 템플릿을 탐색하도록 되어 있다
+  - config > settings.py 파일 `DIRS` 에 임의의 경로를 넣어서 템플릿을 탐색하는 경로를 커스터마이징 할 수 있다
 ```python
 TEMPLATES = [
     {
