--- a/6.hphk_django_db.md
+++ b/6.hphk_django_db.md
@@ -52,12 +52,12 @@ class Article(models.Model):
 
 ```
 
-- makemigrations
+- `makemigrations`
 	- 실제 데이터베이스 테이블을 만들기 전에 설계도를 그려보는 작업
 	- migrations 폴더에서 확인해볼수 있다. (0001_initial.py...)
-- 마이그레이션 파일 생성
+	- 마이그레이션 파일 생성
 ```cmd
-#/05_django/02_django_orm_crud (master)
+# 05_django/02_django_orm_crud 위치에서
 $ python manage.py makemigrations
 ...
 #실행 결과
@@ -66,24 +66,166 @@ Migrations for 'articles':
     - Create model Article
 (venv)
 ```
-- sqlmigrate
+- `sqlmigrate`
 	- 데이터베이스에 실제로 반영하기 전에 SQL문으로 바뀐 모습을 확인
 ```cmd
-#05_django/02_django_orm_crud 
+#05_django/02_django_orm_crud 위치에서
 $ python manage.py sqlmigrate articles 0001
 ```
-- showmigrations
+- `showmigrations`
 	- migration 설계도를 작성했는데, 이설계도가 실제 DB에 반영되었는지 확인
 ```cmd
 # 05_django/02_django_orm_crud 위치에서
 $ python manage.py showmigrations
 ```
-- migrate 
+![django_sqlite2](C:\TIL\md_img\django_sqlite2.JPG)
+
+- `migrate`
 	- makemigrations로 만든 설계도를 실제 데이터베이스(sqlite3)에 반영한다
 	- 모델의 변경사항과 
 ```cmd
 # 05_django/02_django_orm_crud 위치에서
 $ python manage.py migrate
 ```
+- models.py 수정후 makemigrations 하면 새로운 migrations 생성됨
+```cmd
+$ python manage.py makemigrations
+```
+
+- Extensions > SQLite 설치
+![django_sqlite4](C:\TIL\md_img\django_sqlite3.JPG)
+
+- ctrl + shift+ p >  sqlite : Open Databse > 
+- 어플리케이션 내에 sqlite 선택
+![django_sqlite4](C:\TIL\md_img\django_sqlite4.jpg)
+```cmd
+student@M150119 MINGW64 /c/TIL/05_django/02_django_orm_crud (master)
+$ python manage.py shell #장고 프로젝트 쉘 실행
+$ pip install ipython #ipython 설치
+$ python manage.py shell
+```
+![django_sqlite5](C:\TIL\md_img\django_sqlite5.jpg)
+
+```sqlite
+In []: from articles.models import Article
+
+In []: Article.objects.all()
+Out[]: <QuerySet []>
+
+```
 
 #### 2. ORM - CRUD
+- ORM을 리턴되는 형식
+	- QuerySet : 다수의 객체가 담김(파이썬 리스트 다루는 것과 비슷)
+	- Query : 단위 객체
+- 모델명.objects.명령
+	- objects : 모델 클래스 정보를 토대로 실제 데이터베이스에 쿼리를 실행해서 데이터베이스와 의사소통하는 통역사(매니저) 역할
+- ORM을 사용하는 이유
+	- SQL문에 종속되지 않고 데이터를 객체 형태로 다루기 위해
+
+##### Create
+- 데이터 저장 방법
+```sqlite
+In []:article = Article() #객체생성
+
+#첫번째 방법
+In []:article.title = 'first'
+In []:article.context = 'django'
+In []:article.save() #db에 저장
+
+#정장된 객체확인
+In []:Article.objects.all() 
+
+#두번째 방법: 함수에서 키워드 인자 넘겨주는 방식
+In []:article = Article(title='second', context='django')
+In []:article.save()
+
+#세번째 방법: 쿼리셋 객체 생성과 DB저장을 한번에 해결
+In []:Article.objects.create(title='third', context='django')
+
+```
+- 유효성 검증
+```sqlite
+In []:article.full_clean()
+```
+##### 객체를 표시하는 형식 커스터마이징
+- models.py 수정
+- 수정후 shell모드에서 종료 후 shell 재 실행
+```cmd
+In []:exit()
+
+$ python manage.py shell
+```
+
+```sqlite
+In []: from articles.models import Article
+
+In []: Article.objects.all()
+Out[]: <QuerySet [<Article: [1]: first>, <Article: [2]: second>, <Article: [3]: third>]>
+```
+
+##### Read
+- filter()는 `QuerySet`으로 리턴됨
+- first()는 `Article` 형식으로 리턴됨
+- get() 데이터가 없으면 에러를 리턴함
+```sqlite
+In []: from articles.models import Article
+
+#filter() 함수
+In []: articles = Article.objects.filter(title='first')
+In []: articles
+Out[]: <QuerySet [<Article: [1번글]: first>]>
+
+#first()함수
+In []: articles = Article.objects.filter(title='first').first()
+In []: articles
+Out[]: <Article: [1번글]: first>
+
+#get()함수
+In []: articles = Article.objects.filter(title='first').get()
+In []: articles
+Out[]: <Article: [1번글]: first>
+
+#정렬-내림차순
+In []: articles = Article.objects.order_by('-pk')
+In []: articles
+Out[]: <QuerySet [<Article: [3번글]: third>, <Article: [2번글]: second>, <Article: [1번글]: first>]>
+
+In []: articles = Article.objects.all()[1:3]
+In []: articles
+Out[]: <QuerySet [<Article: [2번글]: second>, <Article: [3번글]: third>]>
+
+#type 데이터 타입확인
+In []: type(articles)
+Out[]: django.db.models.query.QuerySet
+
+#fir 문자가 포함된 데이터 검색
+In []: article = Article.objects.filter(title__contains='fir')
+In []: article
+Out[]: <QuerySet [<Article: [1번글]: first>]>
+
+#fir 문자로 시작하는 데이터 검색
+In []: article = Article.objects.filter(title__startswith='fir')
+In []: article
+Out[]: <QuerySet [<Article: [1번글]: first>]>
+
+#d 문자로 끝나는 데이터 검색
+In []: article = Article.objects.filter(title__endswith='d')
+In []: article
+Out[]: <QuerySet [<Article: [2번글]: second>, <Article: [3번글]: third>]>
+
+```
+
+##### Update :데이터 수정
+```sqlite
+In []:article = Article.objects.get(pk=2)
+In []: article.title = 'hello'
+
+In []: article.save()
+```
+
+##### Delete :데이터 삭제
+```sqlite
+In []:article = Article.objects.get(pk=2)
+In []: article.delete()
+```
