--- a/6.hphk_django_db.md
+++ b/6.hphk_django_db.md
@@ -54,7 +54,12 @@ class Article(models.Model):
 
 - `makemigrations`
 	- 실제 데이터베이스 테이블을 만들기 전에 설계도를 그려보는 작업
+	
 	- migrations 폴더에서 확인해볼수 있다. (0001_initial.py...)
+	
+
+![django_migration](https://user-images.githubusercontent.com/33045725/67827102-1f064b00-fb12-11e9-82f6-1babe3aa1408.jpg)
+	
 	- 마이그레이션 파일 생성
 ```cmd
 # 05_django/02_django_orm_crud 위치에서
@@ -78,7 +83,7 @@ $ python manage.py sqlmigrate articles 0001
 # 05_django/02_django_orm_crud 위치에서
 $ python manage.py showmigrations
 ```
-![django_sqlite2](C:\TIL\md_img\django_sqlite2.JPG)
+![django_sqlite2](https://user-images.githubusercontent.com/33045725/67827067-0b5ae480-fb12-11e9-9883-c25b73a8187b.JPG)
 
 - `migrate`
 	- makemigrations로 만든 설계도를 실제 데이터베이스(sqlite3)에 반영한다
@@ -93,18 +98,18 @@ $ python manage.py makemigrations
 ```
 
 - Extensions > SQLite 설치
-![django_sqlite4](C:\TIL\md_img\django_sqlite3.JPG)
+![django_sqlite3](https://user-images.githubusercontent.com/33045725/67827069-0b5ae480-fb12-11e9-8fbb-10af4225b17e.JPG)
 
 - ctrl + shift+ p >  sqlite : Open Databse > 
 - 어플리케이션 내에 sqlite 선택
-![django_sqlite4](C:\TIL\md_img\django_sqlite4.jpg)
+![django_sqlite4](https://user-images.githubusercontent.com/33045725/67827071-0bf37b00-fb12-11e9-908c-4d4523d489b8.jpg)
 ```cmd
 student@M150119 MINGW64 /c/TIL/05_django/02_django_orm_crud (master)
 $ python manage.py shell #장고 프로젝트 쉘 실행
 $ pip install ipython #ipython 설치
 $ python manage.py shell
 ```
-![django_sqlite5](C:\TIL\md_img\django_sqlite5.jpg)
+![django_sqlite5](https://user-images.githubusercontent.com/33045725/67827073-0bf37b00-fb12-11e9-88b6-2e4c804e1221.jpg)
 
 ```sqlite
 In []: from articles.models import Article
