--- a/6.hphk_django_db.md
+++ b/6.hphk_django_db.md
@@ -26,7 +26,7 @@ $ python manage.py startapp articles
 		- 컬럼에 대한 정보, 해당 데이터에 대한 정보를 정의하는 곳
 	- Template
 	- View
-#### Model 로직
+##### Model 로직
 - 데이터베이스 컬럼(열)과 어떠한 타입으로 정의할 것인지에 대한 정보를 `django.db.models` 라는 곳에서 상속받아서 정의한다
 - 모든 필드들은 `NOT NULL` 조건이 붙는다.
 - 각각의 클래스 변수는 데이터베이스 필드를 나타낸다.
@@ -60,9 +60,8 @@ class Article(models.Model):
 
 ![django_migration](https://user-images.githubusercontent.com/33045725/67827102-1f064b00-fb12-11e9-82f6-1babe3aa1408.jpg)
 	
-	- 마이그레이션 파일 생성
 ```cmd
-# 05_django/02_django_orm_crud 위치에서
+# 05_django/02_django_orm_crud 위치에서 마이그레이션 파일 생성
 $ python manage.py makemigrations
 ...
 #실행 결과
@@ -93,6 +92,8 @@ $ python manage.py showmigrations
 $ python manage.py migrate
 ```
 - models.py 수정후 makemigrations 하면 새로운 migrations 생성됨
+
+![image](https://user-images.githubusercontent.com/33045725/67827716-2c243980-fb14-11e9-95f6-05f740ad1fcf.png)
 ```cmd
 $ python manage.py makemigrations
 ```
@@ -155,6 +156,7 @@ In []:article.full_clean()
 ```
 ##### 객체를 표시하는 형식 커스터마이징
 - models.py 수정
+- 
 - 수정후 shell모드에서 종료 후 shell 재 실행
 ```cmd
 In []:exit()
