--- a/6.hphk_django_db.md
+++ b/6.hphk_django_db.md
@@ -44,7 +44,7 @@ class Article(models.Model):
     # 장고 내부에서 데이터 유효성 검증을 할 때 사용
     title = models.CharField(max_length=30)
     # 긴 문자열은 TextField 사용
-    context = models.TextField()
+    content = models.TextField()
     # auto_now_add=True : 인스턴스 최초 생성 시각
     created_at = models.DateTimeField(auto_now_add=True)
     #auto_now=True : 인스턴스 최종 수정 시각 (업데이트됨)
@@ -91,7 +91,20 @@ $ python manage.py showmigrations
 # 05_django/02_django_orm_crud 위치에서
 $ python manage.py migrate
 ```
-- models.py 수정후 makemigrations 하면 새로운 migrations 생성됨
+- models.py 수정후 `makemigrations` 하면 새로운 migrations 파일이 생성됨
+```python
+from django.db import models
+
+# django.db.models.Model 클래스를 상속받아서 모델을 정의함
+class Article(models.Model):
+    ...
+    # auto_now=True : 인스턴스 최종 수정 시각 (업데이트됨)
+    updated_at = models.DateTimeField(auto_now=True)
+
+    # 객체를 표시하는 형식 커스터마이징
+    def __str__(self):
+        return f'[{self.pk}번글]: {self.title}'
+```
 
 ![image](https://user-images.githubusercontent.com/33045725/67827716-2c243980-fb14-11e9-95f6-05f740ad1fcf.png)
 ```cmd
