--- a/6.hphk_django_db.md
+++ b/6.hphk_django_db.md
@@ -139,7 +139,7 @@ In []:article.title = 'first'
 In []:article.context = 'django'
 In []:article.save() #db에 저장
 
-#정장된 객체확인
+#저장된 객체확인
 In []:Article.objects.all() 
 
 #두번째 방법: 함수에서 키워드 인자 넘겨주는 방식
