관리자 사이트 커스터마이징

--- a/6.hphk_django_db.md
+++ b/6.hphk_django_db.md
@@ -1,6 +1,6 @@
 ## 2019.10.30
 
-## Database
+## Database - Django ORM
 
 - ORM 이용하여 데이터 엑세스
 
@@ -247,4 +247,39 @@ In []: article.save()
 ```sqlite
 In []:article = Article.objects.get(pk=2)
 In []: article.delete()
+```
+
+## Django 관리자페이지 커스터마이징
+- 관리자페이지 계정생성
+```cmd
+student@M150119 MINGW64 /c/TIL/05_django/02_django_orm_crud (master)
+$ python manage.py createsuperuser
+Username (leave blank to use 'student'): 
+Email address: 
+Password:
+Password (again):
+The password is too similar to the username.
+This password is too common.
+Bypass password validation and create user anyway? [y/N]: y
+Superuser created successfully.
+(venv)
+```
+- http://127.0.0.1:8000/admin/ 접속하여 생성한 계정으로 로그인
+![admin1](https://user-images.githubusercontent.com/33045725/67828650-8bd01400-fb17-11e9-8f0a-db9763c57a79.png)
+
+- admin.py 수정
+```python
+from django.contrib import admin
+from .models import Article
+
+# Register your models here.
+class ArticleAdmin(admin.ModelAdmin):
+    list_display = ('pk','title','content','created_at','updated_at',)
+    list_display_links = ('title',) #링크설정
+    list_filter = ('created_at',) #필터설정
+    #list_editable = ('content',) #리스트에서 수정모드 설정
+    #list_per_page = 2 #한페이지에 리스트 개수
+
+admin.site.register(Article, ArticleAdmin)
+
 ```
