--- a/6.hphk_django_db.md
+++ b/6.hphk_django_db.md
@@ -4,17 +4,13 @@
 
 - ORM 이용하여 데이터 엑세스
 
-```cmd
-student@M150119 MINGW64 /c/TIL/05_django (master)
+```bash
+#05_django (master)
 $ source ~/venv/Scripts/activate
-(venv)
-student@M150119 MINGW64 /c/TIL/05_django (master)
 $ cd 02_django_orm_crud/
-(venv)
-student@M150119 MINGW64 /c/TIL/05_django/02_django_orm_crud (master)
+
+#05_django/02_django_orm_crud (master)
 $ django-admin startproject config .
-(venv)
-student@M150119 MINGW64 /c/TIL/05_django/02_django_orm_crud (master)
 $ python manage.py startapp articles
 ```
 
@@ -60,7 +56,7 @@ class Article(models.Model):
 
 ![django_migration](https://user-images.githubusercontent.com/33045725/67827102-1f064b00-fb12-11e9-82f6-1babe3aa1408.jpg)
 	
-```cmd
+```bash
 # 05_django/02_django_orm_crud 위치에서 마이그레이션 파일 생성
 $ python manage.py makemigrations
 ...
@@ -72,13 +68,13 @@ Migrations for 'articles':
 ```
 - `sqlmigrate`
 	- 데이터베이스에 실제로 반영하기 전에 SQL문으로 바뀐 모습을 확인
-```cmd
+```bash
 #05_django/02_django_orm_crud 위치에서
 $ python manage.py sqlmigrate articles 0001
 ```
 - `showmigrations`
 	- migration 설계도를 작성했는데, 이설계도가 실제 DB에 반영되었는지 확인
-```cmd
+```bash
 # 05_django/02_django_orm_crud 위치에서
 $ python manage.py showmigrations
 ```
@@ -87,14 +83,14 @@ $ python manage.py showmigrations
 - `migrate`
 	- makemigrations로 만든 설계도를 실제 데이터베이스(sqlite3)에 반영한다
 	- 모델의 변경사항과 
-```cmd
+```bash
 # 05_django/02_django_orm_crud 위치에서
 $ python manage.py migrate
 ```
 - models.py 수정후 `makemigrations` 하면 새로운 migrations 파일이 생성됨
 
 ![image](https://user-images.githubusercontent.com/33045725/67827716-2c243980-fb14-11e9-95f6-05f740ad1fcf.png)
-```cmd
+```bash
 $ python manage.py makemigrations
 ```
 
@@ -104,8 +100,8 @@ $ python manage.py makemigrations
 - ctrl + shift+ p >  sqlite : Open Databse > 
 - 어플리케이션 내에 sqlite 선택
 ![django_sqlite4](https://user-images.githubusercontent.com/33045725/67827071-0bf37b00-fb12-11e9-908c-4d4523d489b8.jpg)
-```cmd
-student@M150119 MINGW64 /c/TIL/05_django/02_django_orm_crud (master)
+```bash
+#05_django/02_django_orm_crud (master)
 $ python manage.py shell #장고 프로젝트 쉘 실행
 $ pip install ipython #ipython 설치
 $ python manage.py shell
@@ -251,8 +247,8 @@ In []: article.delete()
 
 ## Django 관리자페이지 커스터마이징
 - 관리자페이지 계정생성
-```cmd
-student@M150119 MINGW64 /c/TIL/05_django/02_django_orm_crud (master)
+```bash
+#05_django/02_django_orm_crud (master)
 $ python manage.py createsuperuser
 Username (leave blank to use 'student'): 
 Email address: 
@@ -281,5 +277,31 @@ class ArticleAdmin(admin.ModelAdmin):
     #list_per_page = 2 #한페이지에 리스트 개수
 
 admin.site.register(Article, ArticleAdmin)
+```
+
+## Django-Extensions
+> 기본 Django Shell은 직접 모델을 import 해줘야야 하는 불편함이 있었지만 shell_plus는 필요한 모델을 자동으로 import 해주기 때문에 편리하다
+
+- 확장툴 설치
+```bash
+#05_django/02_django_orm_crud (master)
+$ pip install django-extensions
+$ pip install ipython 
+
+```
+
+- 앱 등록하기
+	- settings.py 추가
+```python
+INSTALLED_APPS = [
+    ...
+    #Third party apps
+    'django_extensions',
+    ...
+```
+- shell 실행
+```bash
+$ python manage.py shell_plus
+``
 
 ```
