django crate,read부분 추가

--- a/4.hphk_flask.md
+++ b/4.hphk_flask.md
@@ -90,7 +90,7 @@ for x in pricelist:
 ```
 ## 1. Start Flask
 ### 1.0 가상환경 실행
-```cmd
+```bash
 #기본 사용법
 #$ python -m venv 가상환경이름
 $ python -m venv venv
@@ -111,7 +111,7 @@ $ deactivate
 
 -  첫 시작은 공식문서 참고하기(https://flask.palletsprojects.com/en/1.1.x/api/)
 -  flask 설치
-```cmd
+```bash
 #작업폴더 위치에서
 source ~/venv/Scripts/activate #가상환경 실행
 pip install flask #flask 설치
@@ -120,7 +120,7 @@ python -m pip install --upgrade pip
 
 ### 1.2 개발용 서버 실행
 - flask 실행
-```cmd
+```bash
 cd 03_Flask/
 #파일 지정해서 실행
 #사용자가 지정해서 파일생성시 코드 수정시 서버 재구동 필요
@@ -153,7 +153,7 @@ if __name__ == '__main__':
 ```
 
 - app.py로 생성했을경우 아래와 같이 명령어 실행 가능
-```cmd
+```bash
 python app.py
 ```
 
@@ -362,7 +362,7 @@ def godmademe():
 ### 아스키 아트 API 활용
 - API 주소: http://artii.herokuapp.com/
 - 가상환경 내에서 requests 설치
-```cmd
+```bash
 source ~/venv/Scripts/activate #가상환경 실행
 pip install requests
 ```
