--- a/5.hphk_django.md
+++ b/5.hphk_django.md
@@ -11,7 +11,7 @@
 - **View**: view는 HTTP 요청을 수신하고 HTTP 응답을 반환하는 요청 처리 함수입니다. View는 Model을 통해 요청을 충족시키는 데 필요한 데이터에 접근합니다. 그리고 탬플릿에게 응답의 서식 설정을 맡깁니다.
 - **Models**: Model은 application의 데이터 구조를 정의하고 데이터베이스의 기록을 관리(추가, 수정, 삭제)하고 query하는 방법을 제공하는 파이썬 객체입니다.. 
 - **Templates**: 탬플릿은 파일의 구조나 레이아웃을 정의하고(예: HTML 페이지), 실제 내용을 보여주는 데 사용되는 플레이스홀더를 가진 텍스트 파일입니다. view는 HTML 탬플릿을 이용하여 동적으로ㅔㅑ HTML 페이지를 만들고 model에서 가져온 데이터로 채웁니다. 탬플릿으로 모든 파일의 구조를 정의할 수 있습니다.탬플릿이 꼭 HTML 타입일 필요는 없습니다
-```cmd
+```bash
 $ mkdir 05_django #폴더생성
 $ python -m venv venv #05_django위치에서 가상환경 생성
 
@@ -49,7 +49,7 @@ $ deactivate #어느 경로에서나 상관없음
     }
 ```
 #### Django 설치
-```cmd
+```bash
 $ pip list
 $ python -m pip install --upgrade pip
 
@@ -59,7 +59,7 @@ $ python -m django --version #django 버전확인
 ```
 ![django4](https://user-images.githubusercontent.com/33045725/67652231-47ae0980-f987-11e9-995f-be26a3ff47e5.JPG)
 
-```cmd
+```bash
 $ cd 05_django/
 $ source ~/venv/Scripts/activate #가상환경 실행
 
@@ -79,7 +79,7 @@ $ python manage.py runserver #서버 실행
 - db.sqlite3 #db정보
 - manage.py #django프로젝트 의사소통할때 사용하는 command line 유틸리티
 
-```cmd
+```bash
 student@M150119 MINGW64 /c/TIL/05_django/00_django_intro (master)
 $ python manage.py startapp pages #실행하면 pages 파일Application 생성됨
 ```
