--- a/5.hphk_django2.md
+++ b/5.hphk_django2.md
@@ -14,7 +14,7 @@
     4. 추가적인 설정
     5. 로켓확인
 
-```cmd
+```bash
 $ cd 05_django/
 $ source ~/venv/Scripts/activate #가상환경 실행
 
@@ -406,13 +406,14 @@ static_sample
 - 프로젝트를 받아보는 다른 사람이 프로젝트에 필요한 파이썬 패키지들을 정확하게 설치하기 위해 현재 설치되어 있는 패키지들 목록을 넘겨준다
 
 - 현재 가상환경에 설치되어 있는 패키지 리스트 목록을 파일로 생성
-```cmd
+```bash
 # 프로젝트 경로에서
 student@M150119 MINGW64 /c/TIL/05_django/01_django_intro_2 (master)
 $ pip freeze > requirements.txt
 ```
 - 패키지 목록을 읽어서 없는 패키지를 자동으로 설치하기
-```cmd
+```bash
 student@M150119 MINGW64 /c/TIL/05_django/01_django_intro_2 (master)
 $ pip install -r requirements.txt
 ```
+
