django crud 내용수정

--- a/7.hphk_django_db_crud.md
+++ b/7.hphk_django_db_crud.md
@@ -32,6 +32,15 @@ $ python manage.py startapp articles #어플리케이션 생성
 			- base.html
 ```
 
+- config >  settings.py 수정
+```python
+INSTALLED_APPS = [
+    'articles',
+    'django_extensions',
+    ...
+]
+```
+
 - models.py
 ```python
 from django.db import models
@@ -119,15 +128,15 @@ $ python manage.py migrate
 
 {% block body %}
 <h1 class='text-center'></h1>
-<form action='/articles/create/' method='POST'>
+<form action="{% url 'articles:create' %}" method='POST'>
 {% csrf_token %}
-TITLE: <input type="text" name="title"><br>
-CONTENT: <textarea name="content" cols="30" rows="10" ></textarea><br>
+<label for="title">TITLE</label> <input id="title" type="text" name="title"><br>
+<label for="content">CONTENT</label><textarea id="content" name="content" cols="30" rows="10" ></textarea><br>
 
 <input type="submit">
 </form>
 <hr>
-<a href="/articles/">BACK</a>
+<a href="{% url 'articles:index' %}">BACK</a>
 {% endblock body %}
 ```
 - views.py 함수 추가
@@ -156,8 +165,16 @@ def create(request):
 
     article = Article(title=title, content=content)
     article.save()
-    #return render(request,'articles/index.html')
-    return redirect('/articles/')
+    
+    return redirect('articles:index')
+
+#게시글 상세정보를 가져오는 함수
+def detail(request,article_pk):
+    article = Article.objects.get(pk=article_pk)
+    context = {
+        'article':article
+    }
+    return render(request,'articles/detail.html',context)
 
 ```
 - 03_django_crud > articles > urls.py 작업
@@ -167,12 +184,16 @@ from django.urls import path
 
 from . import views
 
+app_name = 'articles'
 urlpatterns = [
-    path('create/',views.create),
-    path('new/',views.new),
-    path('',views.index)
+    path('',views.index, name='index'),    # READ - Index
+    path('new/',views.new, name='new'),     # CREATE - 폼 전달
+    path('create/',views.create, name='create'),   # CREATE - DB 저장
+    path('<int:article_pk>/',views.detail, name='detail'),     # READ - Detail
+    path('<int:article_pk>/delete/', views.delete, name='delete'),     # DELETE
+    path('<int:article_pk>/edit/', views.edit, name='edit'),     # UPDATE - 폼 전달
+    path('<int:article_pk>/update/', views.update, name='update'),     # UPDATE - DB 저장
 ]
-
 ```
 
 #### 2. Read (Detail 페이지)
@@ -199,10 +220,12 @@ def detail(request,article_pk):
 <P>생성시각:{{article.created_at}}</P>
 <P>수정시각:{{article.updated_at}}</P>
 <hr>
-<a href="/articles/">[BACK]</a>
+<a href="{% url 'articles:index' %}">[BACK]</a>
+<a href="{% url 'articles:edit' article.pk %}">[EDIT]</a>
+<a href="{% url 'articles:delete' article.pk %}">[DELETE]</a>
 {% endblock body %}
-
 ```
+
 - articles > urls.py : path 추가
 ```python
 from django.contrib import admin
@@ -217,8 +240,80 @@ urlpatterns = [
 ```
 
 #### 3. Update
+- articles > view.py 함수 추가
+```python
+# 사용자에게 게시글 수정 폼을 던져주는 함수
+def edit(request, article_pk):
+    article = Article.objects.get(pk=article_pk)
+    context = {'article': article}
+    return render(request, 'articles/edit.html', context)
 
+# 수정 사항을 받아서 DB에 저장(반영)하는 함수
+def update(request, article_pk):
+    article = Article.objects.get(pk=article_pk)
+    article.title = request.POST.get('title')
+    article.content = request.POST.get('content')
+    article.save()
+    #return redirect(f'/articles/{article.pk}/')
+    return redirect('articles:detail',article_pk)
+```
+- edit.html 추가
+```html
+{% extends 'base.html' %}
 
+{% block body %}
+<h1 class='text-center'></h1>
+{% comment %} <form action='/articles/{{ article.pk }}/update/' method='POST'> {% endcomment %}
+<form action="{% url 'articles:update' article.pk %}" method='POST'>
+{% csrf_token %}
+TITLE: <input type="text" name="title" value="{{ article.title }}"><br>
+CONTENT: <textarea name="content" cols="30" rows="10" >{{ article.content }}</textarea><br>
+
+<input type="submit">
+</form>
+<hr>
+<a href="{% url 'articles:detail' article.pk %}">BACK</a>
+{% endblock body %}
+```
+- urls.py : url 추가
+```python
+from django.contrib import admin
+from django.urls import path
+
+from . import views
+
+app_name = 'articles'
+urlpatterns = [
+   ...
+    path('<int:article_pk>/edit/', views.edit, name='edit'),     # UPDATE - 폼 전달
+    path('<int:article_pk>/update/', views.update, name='update'),     # UPDATE - DB 저장
+]
+
+```
 
 #### 4. Delete
+- views.py 함수추가
+```python
+# 게시글 삭제 함수
+def delete(request, article_pk):
+    article = Article.objects.get(pk=article_pk)
+    article.delete()
+    return redirect('articles:index')
 
+```
+- detail.html 화면에 삭제버튼 추가
+- articles > urls.py : url 추가
+```python
+from django.contrib import admin
+from django.urls import path
+
+from . import views
+
+app_name = 'articles'
+urlpatterns = [
+   ...
+    path('<int:article_pk>/delete/', views.delete, name='delete'),     # DELETE
+   ...
+]
+
+```
