--- a/8.hphk_django_exam_faker.md
+++ b/8.hphk_django_exam_faker.md
@@ -1,7 +1,7 @@
 ## 전생 직업 APP 만들기 실습
 1. 사전작업
 
-- Faker API 사용법 익히기 -> Shell Plus 이용
+- Faker API(https://faker.readthedocs.io/en/master/) 사용법 익히기 -> Shell Plus 이용
 - jobs 애플리케이션 생성
 - 'Job' 모델 클래스 생성
 	- name 필드 : 입력받은 사용자 이름
@@ -15,13 +15,11 @@
 	- Faker API를 통해 직업정보 가져오기
 	- 해당 이름을 처음 조회할 때 이름-직업 정보를 DB에 저장시켜버림
 	- 즉 이름을 여러번 조회하더라도 처음 저장된 직업이 바뀌지 않음
-- [심화] GIPHY API를 사용해서 직업에 따른 움짤도 함께 보여주기
+- [심화] GIPHY API(https://developers.giphy.com/)를 사용해서 직업에 따른 움짤도 함께 보여주기
 	- GIPHY API 회원가입 & API Key발급받기
 	- 공식문서보면서 요청 보내서 움짤 받아보기
 	- (주소창에 URL + 쿼리스트링 직접 넣어보면서 사진정보가 잘 나오는지 확인 먼저 해보는게 좋음)
 	
-- https://faker.readthedocs.io/en/master/
-- https://developers.giphy.com/
 
 ----
 
