--- a/6.hphk_django_db.md
+++ b/6.hphk_django_db.md
@@ -47,6 +47,7 @@ class Article(models.Model):
     # updated_at = models.DateTimeField(auto_now=True)
 
 ```
+- ctrl + shift + p > `SQLite: Open Database` > `(해당 어플리케이션) db.sqlite3 선택`
 
 - `makemigrations`
 	- 실제 데이터베이스 테이블을 만들기 전에 설계도를 그려보는 작업
