--- a/11.hphk_restful_api.md
+++ b/11.hphk_restful_api.md
@@ -33,7 +33,9 @@
 $ python manage.py show_urls
 ```
 #### RESTful 구조로 변경 실습
+- 05_DJANGO > 03_django_crud > articles 위치에서
 - views.py :기존 create 함수 로직 수정
+	
 ```python
 def create(request):
     if request.method == 'POST':
@@ -103,4 +105,170 @@ def update(request, article_pk):
 <input type="submit" value="DELETE">
 </form>
 {% endblock body %}
+```
+
+## 1:N Relation
+- Foreign Key (외래키)
+	- 참조키의 값으로는 부모 테이블에 존재하는 키의 값만을 넣을 수 있다
+	참조 무결성을 위해 참조 키를 사용하여 부모 테이블의 유일한 값을 참조한다.
+	(부모 테이블의 기본키를 참조)
+	- 참조 키의 값이 부모 테이블의 기본키일 필요는 없지만 유일해야 한다
+#### 1. Modeling
+- possible values for on_delete
+	- CASECADE : 부모 객체가 삭제되면 참조하는 객체도 삭제
+	- PROTECT: 참조가 되어 있는 경우 오류발생
+	- SET_NULL: 부모 객체가 삭제되면 모든 값을 NULL로 치환(NOT NULL 조건이면 불가능)
+	- SET_DEFAULT: 모든 값이 DEFAULT 값으로 치환( 해당 값이 DEFAULT 값이 지정되어 있어야 함)
+	- SET() :특정 함수 호출
+	- DO_NOTHING: 아무것도 하지 않는다. 다만 DB 필드에 대한 SQL `ON DELETE` 제한 조건이 설정되어 있어야 한다.
+
+#### 2. ORM 실습
+- 05_DJANGO > 03_django_crud > articles 위치에서
+- models.py : Comment 함수추가
+```python
+from django.db import models
+
+# Create your models here.
+class Article(models.Model):
+    title = models.CharField(max_length=40)
+    content = models.TextField()
+    created_at = models.DateTimeField(auto_now_add=True)
+    updated_at = models.DateTimeField(auto_now=True)
+
+    #객체 표시 형식 수정
+    def __str__(self):
+        return f'[{self.pk}] {self.title}'
+        
+class Comment(models.Model):    
+    article = models.ForeignKey(Article, on_delete=models.CASCADE)
+    content = models.CharField(max_length=250)
+    created_at = models.DateTimeField(auto_now_add=True)
+    updated_at = models.DateTimeField(auto_now=True)
+
+    #Model Level에서 Metadata 설정
+    class Meta:
+        ordering = ['-pk',] #정렬설정
+    
+    def __str__(self):
+        return self.content
+
+```
+
+- db생성
+```bash
+#05_django/03_django_crud (master)
+$ python manage.py makemigrations
+Migrations for 'articles':
+  articles\migrations\0002_comment.py
+    - Create model Comment
+(venv)
+#05_django/03_django_crud (master)
+$ python manage.py migrate
+Operations to perform:
+  Apply all migrations: admin, articles, auth, contenttypes, jobs, sessions, students
+Running migrations:
+  Applying articles.0002_comment... OK
+(venv)
+```
+- models.py 수정 : ForeignKey 추가
+```python
+class Comment(models.Model):
+    article = models.ForeignKey(Article, on_delete=models.CASCADE)
+    ...
+```
+
+-  makemigrations
+```bash
+#05_django/03_django_crud (master)
+$ python manage.py makemigrations
+You are trying to add a non-nullable field 'article' to comment without a default; we can't do that (the database needs something to populate existing rows).
+Please select a fix:
+ 1) Provide a one-off default now (will be set on all existing rows with a null value for this column)
+ 2) Quit, and let me add a default in models.py
+Select an option: 1
+Please enter the default value now, as valid Python
+The datetime and django.utils.timezone modules are available, so you can do e.g. timezone.now
+Type 'exit' to exit this prompt
+>>> 1
+Migrations for 'articles':
+  articles\migrations\0003_comment_article.py
+    - Add field article to comment
+#05_django/03_django_crud (master)
+$ python manage.py migrate
+```
+
+![image-20191104162245006](md_img/image-20191104162245006.png)
+
+- shell_plus 실행
+```bash
+#05_django/03_django_crud (master)
+$ python manage.py shell_plus
+
+In []: article = Article.objects.get(pk=1)
+In []: comment = Comment()
+In []: comment.content = 'hihi...'
+In []: comment.article = article
+In []: comment.save()
+
+In []: Comment.objects.all()
+Out[]: <QuerySet [<Comment: hihi...>]>
+
+In []: comment.article.pk
+Out[]: 1
+
+In []: comment.article.title
+Out[]: '1111'
+
+In []: comment = Comment(article=article,content='comment test')
+In []: comment.save()
+
+```
+- admin 사이트에 comment 추가
+	- admin.py :CommentAdmin 함수 추가
+```python
+from django.contrib import admin
+from .models import Article
+from .models import Comment
+
+# Register your models here.
+class ArticleAdmin(admin.ModelAdmin):
+    list_display = ('pk','title','content','created_at','updated_at')
+
+class CommentAdmin(admin.ModelAdmin):
+    list_display = ('pk','content','created_at','updated_at')
+
+admin.site.register(Article, ArticleAdmin)
+admin.site.register(Comment, CommentAdmin)
+
+```
+
+- 사용할 수 있는 함수 확인
+```bash
+In []: dir(article)
+Out[]: 
+['DoesNotExist',
+ 'MultipleObjectsReturned',
+ '__class__',
+ '__delattr__',
+ '__dict__',
+ '__dir__',
+ '__doc__',
+ '__eq__',
+ '__format__',
+ ...
+ ]
+ 
+In []: comments = article.comment_set.all()
+
+In []: comments
+Out[]: <QuerySet [<Comment: comment test>, <Comment: hihi...>]>
+```
+
+- models.py
+```python
+class Comment(models.Model):
+    #related_name : 부모 테이블에서 역으로 참조할때 기본적으로 모델이름_set 형식으로 불러온다. 
+    #related_name이라는 값을 설정해서 _set 명령어를 임의로 변경할 수 있다
+    #article = models.ForeignKey(Article, on_delete=models.CASCADE, related_name='comments')
+	...
 ```
