댓글 생성 기능추가

--- a/11.hphk_restful_api.md
+++ b/11.hphk_restful_api.md
@@ -259,7 +259,8 @@ Out[]:
  '__format__',
  ...
  ]
- 
+
+#article sub table 정보 조회
 In []: comments = article.comment_set.all()
 
 In []: comments
@@ -273,4 +274,34 @@ class Comment(models.Model):
     #related_name이라는 값을 설정해서 _set 명령어를 임의로 변경할 수 있다
     #article = models.ForeignKey(Article, on_delete=models.CASCADE, related_name='comments')
 	...
+```
+
+#### 댓글 작성 기능 추가
+- views.py : 함수 추가
+```python
+#댓글 생성 뷰 함수
+def comments_create(request, article_pk):
+    article = Article.objects.get(pk=article_pk)
+    if request.method == 'POST':
+        pass
+    else:
+        redirect('articles:detail',article_pk)
+        
+```
+- urls.py : path 추가
+```python
+from django.contrib import admin
+from django.urls import path
+
+from . import views
+
+app_name = 'articles'
+urlpatterns = [
+ ... path('<int:article_pk>/comments/',views.comments_create,name='comments_create')
+]
+
+```
+- detail.html
+```html
+
 ```
