--- a/11.hphk_restful_api.md
+++ b/11.hphk_restful_api.md
@@ -277,16 +277,33 @@ class Comment(models.Model):
 ```
 
 #### 댓글 작성 기능 추가
-- views.py : 함수 추가
+- views.py : comments_create 함수 추가
+- views.py : detail 함수에 comments 데이터 조회 항목 추가
 ```python
 #댓글 생성 뷰 함수
 def comments_create(request, article_pk):
     article = Article.objects.get(pk=article_pk)
-    if request.method == 'POST':
-        pass
+
+    if request.method == 'POST':    
+        content = request.POST.get('content')    
+        comment = Comment(article=article,content=content)
+        comment.save()
+        return redirect('articles:detail',article_pk)
     else:
-        redirect('articles:detail',article_pk)
+        return redirect('articles:detail',article_pk)
         
+#게시글 상세정보를 가져오는 함수
+def detail(request,article_pk):
+    article = Article.objects.get(pk=article_pk)
+    #comments = Comment.objects.filter(article_id=article_pk)
+    comments = article.comment_set.all()
+
+    context = {
+        'article':article,
+        'comments':comments
+    }
+    return render(request,'articles/detail.html',context)
+
 ```
 - urls.py : path 추가
 ```python
@@ -303,5 +320,81 @@ urlpatterns = [
 ```
 - detail.html
 ```html
+{% extends 'base.html' %}
 
+{% block body %}
+<h1 class="text-center">DETAIL </h1>
+<P>글 번호:{{article.pk}}</P>
+<P>글 제목:{{article.title}}</P>
+<P>글 내용:{{article.content}}</P>
+<P>생성시각:{{article.created_at}}</P>
+<P>수정시각:{{article.updated_at}}</P>
+<hr>
+<a href="{% url 'articles:index' %}">[BACK]</a>
+<a href="{% url 'articles:update' article.pk %}">[EDIT]</a>
+<form action="{% url 'articles:delete' article.pk %}" method="POST" style="display:inline;" onclick="return confirm('정말로 삭제하시겠습니까?');">
+{% csrf_token %}
+<input type="submit" value="DELETE">
+</form>
+<!--댓글 작성 form-->
+<hr>
+<strong><p>댓글</p></strong>
+<form action="{% url 'articles:comments_create' article.pk %}" method="POST">
+{% csrf_token %}
+<textarea name="content"></textarea>
+<input type="submit" value="댓글작성">
+</form>
+{% for comment in comments %}
+<hr>
+<p> {{ comment.content }}</p>
+{% endfor %}
+{% endblock body %}
+
+```
+
+#### 댓글 삭제 기능 추가
+- views.py : comments_delete함수 추가
+```python
+#댓글 삭제 뷰 함수
+def comments_delete(request,article_pk,comment_pk):
+    if request.method == 'POST':
+        comment = Comment.objects.get(pk=comment_pk)
+        comment.delete()
+        return redirect('articles:detail',article_pk)
+    else:
+        return redirect('articles:detail',article_pk)
+```
+- urls.py : path 추가
+	- URI 형식: 게시글들 중 / 0번째 게시글 / 의 댓글들 중 / 0번 댓글 / 삭제
+```python
+from django.contrib import admin
+from django.urls import path
+from . import views
+
+app_name = 'articles'
+urlpatterns = [
+... path('<int:article_pk>/articles/<int:comment_pk>/comments',views.comments_delete,name='comments_delete')
+]
+
+```
+- delete.html 수정
+```html
+...
+<!--댓글 form-->
+<hr>
+<strong><p>댓글</p></strong>
+<form action="{% url 'articles:comments_create' article.pk %}" method="POST">
+{% csrf_token %}
+<textarea name="content"></textarea>
+<input type="submit" value="댓글작성">
+</form>
+{% for comment in comments %}
+<hr>
+<p> {{ comment.content }}
+  <form action="{% url 'articles:comments_delete' article.pk  comment.pk %}" method="POST">
+  {% csrf_token %}
+  <input type="submit" value="댓글삭제">
+  </form>
+</p>
+{% endfor %}
 ```
