--- a/11.hphk_restful_api.md
+++ b/11.hphk_restful_api.md
@@ -378,10 +378,28 @@ urlpatterns = [
 
 ```
 - delete.html 수정
+  - {% empty %} 댓글이 없는 경우 조건 처리
 ```html
-...
+{% extends 'base.html' %}
+
+{% block body %}
+<h1 class="text-center">DETAIL </h1>
+<P>글 번호:{{article.pk}}</P>
+<P>글 제목:{{article.title}}</P>
+<P>글 내용:{{article.content}}</P>
+<P>생성시각:{{article.created_at}}</P>
+<P>수정시각:{{article.updated_at}}</P>
+<hr>
+<a href="{% url 'articles:index' %}">[BACK]</a>
+<a href="{% url 'articles:update' article.pk %}">[EDIT]</a>
+<form action="{% url 'articles:delete' article.pk %}" method="POST" style="display:inline;" onclick="return confirm('정말로 삭제하시겠습니까?');">
+{% csrf_token %}
+<input type="submit" value="DELETE">
+</form>
 <!--댓글 form-->
 <hr>
+{{comments|length}}개의 댓글이 있습니다.
+{{article.comment_set.all|length}}
 <strong><p>댓글</p></strong>
 <form action="{% url 'articles:comments_create' article.pk %}" method="POST">
 {% csrf_token %}
@@ -390,11 +408,15 @@ urlpatterns = [
 </form>
 {% for comment in comments %}
 <hr>
-<p> {{ comment.content }}
-  <form action="{% url 'articles:comments_delete' article.pk  comment.pk %}" method="POST">
+<p> {{ comment.content }}</p>
+  <form action="{% url 'articles:comments_delete' article.pk  comment.pk %}" method="POST" >
   {% csrf_token %}
-  <input type="submit" value="댓글삭제">
+  <input type="submit" value="댓글삭제" style="display: inline;">
   </form>
-</p>
+{% empty %}
+  <p>댓글이 없는데요..</p>
+  
 {% endfor %}
+{% endblock body %}
 ```
+
