movie 사이트 코드 리팩토링

--- a/11.hphk_restful_api.md
+++ b/11.hphk_restful_api.md
@@ -420,3 +420,13 @@ urlpatterns = [
 {% endblock body %}
 ```
 
+- 종합 실습 프로젝트 코드 리팩토링
+```
+1.RESTful하게 로직 변경(URL & View)
+	- new & create => create
+	- edit & update => update
+2.댓글기능 추가 (1:N)
+	- Comment 클래스 ..
+3. 디자인 보완
+	- CSS + Bootstarp
+```
