--- a/6.hphk_django_db.md
+++ b/6.hphk_django_db.md
@@ -2,7 +2,7 @@
 
 ## Database - Django Model (ORM)
 
-- ORM 이용하여 데이터 엑세스
+- ORM( Object-relational mapping ) 이용하여 데이터 엑세스
 
 ```bash
 #05_django (master)
