--- a/11.hphk_restful_api.md
+++ b/11.hphk_restful_api.md
@@ -420,7 +420,7 @@ urlpatterns = [
 {% endblock body %}
 ```
 
-- 종합 실습 프로젝트 코드 리팩토링
+#### 종합 실습 프로젝트 코드 리팩토링
 ```
 1.RESTful하게 로직 변경(URL & View)
 	- new & create => create
