static file, 이미지 업로드 기능 추가

--- a/11.hphk_restful_api.md
+++ b/11.hphk_restful_api.md
@@ -430,3 +430,97 @@ urlpatterns = [
 3. 디자인 보완
 	- CSS + Bootstarp
 ```
+## Static files
+- Static files 기본경로
+	- 기본적으로 애플리케이션 안에 있는 static 디렉코리를 탐색해서 정적파일을 가져온다
+- `{% load static %}`
+	- 해당 페이지에 정적 파일들을 불러와서 사용하겠다고 선언
+	- 일반적으로는 HTML 문서 상단에 위치. 상속받는 {% extends... %} 태그가 존재하면 상속태그 밑에 위치한다
+- {% static %}
+	- 해당하는 경로에 있는 파일에 대해 장고가 접근할 수 있는 절대 URL 경로를 생성한다
+	- 실제 파일이 위치한 경로는 아님 (예. 127.0.0.1:8000/static/articles/images/sample.png)
+- 프로젝트 내에 config > settings.py 수정
+```json
+#웹 사이트에서 사용할 정적 파일의 최상위 URL경로
+STATIC_URL = '/static/'
+
+#정적 파일이 위치한 경로
+#개발단계에서 사용 -> 실제 프로젝트 배포 단계에서는 다른 방식 사용
+STATICFILES_DIRS =[
+    os.path.join(BASE_DIR, 'config', 'assets'),
+]
+```
+- 변경 후 폴더 구조
+  ![image-20191105143158869](md_img/image-20191105143158869.png)
+
+## 이미지 업로드 기능 추가
+
+- model.py 수정 : Image Field 추가
+```python
+# Create your models here.
+class Article(models.Model):
+    title = models.CharField(max_length=40)
+    content = models.TextField()
+    # 원래 새로운 필드를 추가하면 makemigrations 할때 어떤 값을 넣을건지 Django가 물어본다
+    #기본적으로 blank=False이기 때문이다
+    #blank=True => '빈 문자열'이 들어가도 됨
+    image = models.ImageField(blank=True)
+    created_at = models.DateTimeField(auto_now_add=True)
+    updated_at = models.DateTimeField(auto_now=True)
+
+    #객체 표시 형식 수정
+    def __str__(self):
+        return f'[{self.pk}] {self.title}'
+    ...
+```
+
+- Pillow 설치 후 makemigrations, migrate 실행
+```bash
+# 05_django/03_django_crud
+$pip install Pillow
+
+$ python manage.py makemigrations
+$ python manage.py migrate
+```
+- enctype (인코딩)
+	- application/x-www-form-urlencoded :(기본값) 모든 문자 인코딩
+	- multipart/form-data : 전송되는 데이터 형식 지정(파일/이미지 업로드시 반드시 사용)
+```html
+<form action="{% url 'articles:create' %}" method='POST' enctype="multipart/form-data">
+    {% csrf_token %}
+    <label for="title">TITLE</label> <input id="title" type="text" name="title"><br>
+    <label for="content">CONTENT</label><textarea id="content" name="content" cols="30" rows="10" ></textarea><br>
+    <label for="image">IMAGE</label>
+    <input type="file" name="image" id="image" accept="image/*">
+    <input type="submit">
+</form>
+```
+- settings.py 수정 : MEDIA_URL, MEDIA_ROOT 추가
+```json
+...
+#Media files
+#업로드된 파일의 주소를 만들어주는 역할
+MEDIA_URL = '/media/'
+#실제로 파일이 업로드된 다음에 어디로 배치될 것인지 경로를 정하는 설정
+MEDIA_ROOT = os.path.join(BASE_DIR,'media')
+```
+- 프로젝트 내에 config > urls.py 수정
+  - 예) 03_django_crud > config > urls.py
+```python
+from django.contrib import admin
+from django.urls import path, include
+
+from django.conf import settings
+from django.conf.urls.static import static
+
+...
+# static()
+# 첫번째 인자: 어떤 URL을 정적으로 추가할 지 (Media file)
+# 두번째 인자: 실제 해당 미디어 파일은 어디에 있는지
+urlpatterns += static(settings.MEDIA_URL,document_root=settings.MEDIA_ROOT)
+```
+- 파일업로드시 media폴더 생성됨
+![image-20191105153434980](md_img/image-20191105153434980.png)
+
+![image-20191105153824404](md_img/image-20191105153824404.png)
+
