--- a/11.hphk_restful_api.md
+++ b/11.hphk_restful_api.md
@@ -524,3 +524,21 @@ urlpatterns += static(settings.MEDIA_URL,document_root=settings.MEDIA_ROOT)
 
 ![image-20191105153824404](md_img/image-20191105153824404.png)
 
+- detail.html 수정
+```html
+{% extends 'base.html' %}
+{% load static %}
+{% block body %}
+<h1 class="text-center">DETAIL </h1>
+<!--
+  article.image.url -> 파일주소
+  article.image -> 파일이름(sample.png)
+-->
+{% if article.image %}
+<img src="{{article.image.url}}" alt="{{artice.image}}" style="width:250px;"/><br>
+{% else %}
+<!--이미지 없는경우-->
+<img src="{% static 'articles/images/no_image.jpg' %}" alt="no_image" style="width:250px;">
+{% endif %}
+...
+```
